@@ -429,19 +429,19 @@ typedef struct {
    UINTN             RequestedScreenHeight;
    UINTN             BannerBottomEdge;
    UINTN             RequestedTextMode;
-   UINTN             Timeout;
    UINTN             HideUIFlags;
    UINTN             MaxTags;
    UINTN             GraphicsFor;
    UINTN             LegacyType;
    UINTN             ScanDelay;
-   UINTN             ScreensaverTime;
    UINTN             MouseSpeed;
    UINTN             IconSizes[4];
    UINTN             BannerScale;
-   UINTN             ScaleUI;
-   UINTN             ActiveCSR;
-   UINTN             LogLevel;
+   INTN              ScreensaverTime;
+   INTN              Timeout;
+   INTN              ScaleUI;
+   INTN              ActiveCSR;
+   INTN              LogLevel;
    REFIT_VOLUME     *DiscoveredRoot;
    EFI_DEVICE_PATH  *SelfDevicePath;
    CHAR16           *BannerFileName;
